Profile pour package linux